--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <form class="form">
+    <input class="input-text" name="input-query" type="text" placeholder="Search images..."/>
+    <button class="search-button" type="submit">Search</button>
+    </form>
+    <ul class="gallery"></ul>
 
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <div class="loading-container">
+    <p class="loading-text-content">Loading images, please wait...</p>
+    <span class="loader"></span>
+    </div>
+    <button class="load-btn" type="button" >Load more</button>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
+
